--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 
 ext {
     versions = [
-            support : "28.0.0",
-            constraintlayout : "1.1.3",
-            lifecycle              : "1.1.1",
-            room                   : "1.1.1",
-            coroutine              : "1.0.1"
+            support         : "28.0.0",
+            constraintlayout: "1.1.3",
+            lifecycle       : "1.1.1",
+            room            : "1.1.1",
+            coroutine       : "1.0.1"
     ]
 }
 
@@ -40,6 +40,7 @@ dependencies {
     implementation "com.android.support:support-v4:$versions.support"
     implementation "com.android.support:recyclerview-v7:$versions.support"
     implementation "com.android.support:cardview-v7:$versions.support"
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
