--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity"
+            android:exported="true"
                   android:screenOrientation="portrait"
         >
             <intent-filter>
